--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,4 @@ archives_base_name=TestFabric
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.84.0+1.20.1
 
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=10809
-systemProp.https.proxyHost=127.0.0.1
-systemProp.https.proxyPort=10809
+include 'local.properties'
